--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,9 @@
+@Misc{ulinkConnections,
+author = {ARM Group},
+title = {u{L}ink 2 {U}ser's Guide - {T}arget {C}onnectors},
+note = {\url{http://www.keil.com/support/man/docs/ulink2/ulink2_hw_connectors.htm}, Accesat februarie 2017},
+}
+
 @Misc{elfSpec,
 author = {Tool {I}nterface {S}tandard {(TIS)}},
 title = {Executable and {L}inking {F}ormat {(ELF)}},
